# Stock-Peixe

./: CMakeLists.txt  README.md  run.bat
scripts/: compilar.bat  compilar_e_executar.bat
src/: Peca.h  main.cpp
